FIX(main): Remove scrollbar for debugging

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1171,18 +1171,18 @@ input {
 }
 
 /*============== SCROLL BAR ==============*/
-::-webkit-scrollbar {
-    width: 0.6rem;
-    background-color: var(--scroll-bar-color);
-}
+// ::-webkit-scrollbar {
+//     width: 0.6rem;
+//     background-color: var(--scroll-bar-color);
+// }
 
-::-webkit-scrollbar-thumb {
-    background-color: var(--scroll-thumb-color);
-}
+// ::-webkit-scrollbar-thumb {
+//     background-color: var(--scroll-thumb-color);
+// }
 
-::-webkit-scrollbar-thumb:hover {
-    background-color: var(--text-color-light);
-}
+// ::-webkit-scrollbar-thumb:hover {
+//     background-color: var(--text-color-light);
+// }
 
 /*============ MEDIA QUERIES ============*/
 /* For small devices */
